--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
 </head>
 <body>
     
@@ -27,7 +30,9 @@
 <img src="./images/logoFMR.png" id="logo2"> 
 <img src="./images/fleche.png" id="fleche">
     <div class="cadreImage">
-        <img src="./images/demicadre3.png" id="demicadre">
+        <div id="demicadrejs">
+        <img src="./images/demicadre7.png" id="demicadre">
+        </div>
         <div id="imageAcc">
             <img src="./images/a1.png" id = "skin">
         </div>
